# Postcard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
agents/: postcard-reader.md
commands/: directory.md  inbox.md  log.md  onboard.md  reply.md  send.md  whoami.md
docs/: CLI_REFERENCE.md
hooks/: hooks.json
scripts/: clerk-hook.sh  session-end.sh  session-start.sh  user-prompt-hook.sh
skills/oat-postcard/: SKILL.md
skills/postcard/: SKILL.md
src/oat_postcard/: addressing.py  clerk.py  cli.py  directory.py  ledger.py  paths.py  project.py  session.py  words.py
tests/: conftest.py  test_addressing.py  test_cleanup.py  test_clerk.py  test_cli.py  test_directory.py  test_ledger.py  test_project.py  test_session.py
